force-app/main/default/objects/FSM_ErrorLog__c/FSM_ErrorLog__c.object-meta.xml
<CustomObject>
    <description>Created as part of #SFS-32</description>
    <label>FSM Error Log</label>
    <nameField>
        <displayFormat>Err-{000000}</displayFormat>
        <label>FSM Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FSM Error Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>