force-app/main/default/objects/FSM_ErrorLog__c/fields/FSM_Actioned__c.field-meta.xml
<CustomField>
    <fullName>FSM_Actioned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFI-1260</description>
    <label>Actioned?</label>
    <type>Checkbox</type>
</CustomField>