force-app/main/default/objects/FSM_ErrorLog__c/fields/FSM_ClassFlowName__c.field-meta.xml
<CustomField>
    <fullName>FSM_ClassFlowName__c</fullName>
    <label>Class/Flow Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>