force-app/main/default/objects/FSM_ErrorLog__c/fields/FSM_ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>FSM_ErrorMessage__c</fullName>
    <label>Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>