force-app/main/default/objects/FSM_ErrorLog__c/fields/FSM_ErrorType__c.field-meta.xml
<CustomField>
    <fullName>FSM_ErrorType__c</fullName>
    <description>SFI-2314, To show if a error is just a warning and not a actual error</description>
    <label>Error Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exception</fullName>
                <default>true</default>
                <label>Exception</label>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>