force-app/main/default/objects/FSM_ErrorLog__c/fields/FSM_ExceptionLineNumber__c.field-meta.xml
<CustomField>
    <fullName>FSM_ExceptionLineNumber__c</fullName>
    <label>Exception Line Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>