force-app/main/default/objects/FSM_ErrorLog__c/fields/FSM_Interface__c.field-meta.xml
<CustomField>
    <fullName>FSM_Interface__c</fullName>
    <description>SFI-1260</description>
    <label>Interface</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INT-001</fullName>
            </value>
            <value>
                <fullName>INT-002</fullName>
            </value>
            <value>
                <fullName>INT-003</fullName>
            </value>
            <value>
                <fullName>INT-004</fullName>
            </value>
            <value>
                <fullName>INT-005</fullName>
            </value>
            <value>
                <fullName>INT-006</fullName>
            </value>
            <value>
                <fullName>INT-008</fullName>
            </value>
            <value>
                <fullName>INT009</fullName>
            </value>
            <value>
                <fullName>INT-010</fullName>
            </value>
            <value>
                <fullName>INT-011</fullName>
            </value>
            <value>
                <fullName>INT-014</fullName>
            </value>
            <value>
                <fullName>INT-015</fullName>
            </value>
            <value>
                <fullName>INT-017</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>