force-app/main/default/objects/FSM_ErrorLog__c/fields/FSM_MethodName__c.field-meta.xml
<CustomField>
    <fullName>FSM_MethodName__c</fullName>
    <label>Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>