force-app/main/default/objects/FSM_ErrorLog__c/fields/FSM_RetryFlag__c.field-meta.xml
<CustomField>
    <fullName>FSM_RetryFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFI-2208</description>
    <label>Retry Flag</label>
    <type>Checkbox</type>
</CustomField>