force-app/main/default/objects/FSM_ErrorLog__c/fields/FSM_Type__c.field-meta.xml
<CustomField>
    <fullName>FSM_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Field Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>