force-app/main/default/objects/FSM_ErrorLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FSM_ExternalId__c</columns>
    <columns>FSM_ErrorMessage__c</columns>
    <columns>FSM_ClassFlowName__c</columns>
    <columns>FSM_MethodName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>FSM_ErrorType__c</columns>
    <columns>FSM_Type__c</columns>
    <columns>FSM_Interface__c</columns>
    <columns>FSM_ExceptionLineNumber__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>FSM_Actioned__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>