force-app/main/default/objects/FSM_ErrorLog__c/listViews/FSM_PendingServiceTerritoryMemberUpdate.listView-meta.xml
<ListView>
    <fullName>FSM_PendingServiceTerritoryMemberUpdate</fullName>
    <columns>NAME</columns>
    <columns>FSM_ExternalId__c</columns>
    <columns>FSM_ExceptionLineNumber__c</columns>
    <columns>FSM_Interface__c</columns>
    <columns>FSM_Actioned__c</columns>
    <columns>FSM_ErrorMessage__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FSM_Interface__c</field>
        <operation>equals</operation>
        <value>INT009</value>
    </filters>
    <filters>
        <field>FSM_Actioned__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Pending Service Territory Member Update</label>
</ListView>