force-app/main/default/objects/FSM_ErrorLog__c/listViews/Interface_INT_014.listView-meta.xml
<ListView>
    <fullName>Interface_INT_014</fullName>
    <columns>NAME</columns>
    <columns>FSM_ExceptionLineNumber__c</columns>
    <columns>FSM_Interface__c</columns>
    <columns>FSM_MethodName__c</columns>
    <columns>FSM_RetryFlag__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>FSM_ClassFlowName__c</columns>
    <columns>FSM_ExternalId__c</columns>
    <columns>FSM_Actioned__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FSM_Interface__c</field>
        <operation>equals</operation>
        <value>INT-014</value>
    </filters>
    <filters>
        <field>FSM_RetryFlag__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Interface INT-014</label>
</ListView>